20190403-add reset input field after ajax

--- a/commentsystem/blog/templates/base.html
+++ b/commentsystem/blog/templates/base.html
@@ -11,7 +11,7 @@
     {% block contents %}
     {% endblock %}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.js"></script>
     {% block script %}
     {% endblock %}
 </body>
