--- a/commentsystem/blog/templates/detail.html
+++ b/commentsystem/blog/templates/detail.html
@@ -25,8 +25,8 @@
 
     $(document).ready(function() {
         $('.addComment').click(function() {
-            $('#commentForm').submit(function(event) {
-                event.preventDefault();
+            // $('#commentForm').submit(function(event) {
+            //     event.preventDefault();
                 var postid = "{{ post.id }}";
                 $.ajax ({
                     type: "POST",
@@ -44,7 +44,7 @@
                         }
                 });
                 return false;
-            });
+            // });
         });
         console.log("end ajax");
     });
